DOC: Sphinx gallery pin fix (#1832)
* CI: Update environment to remove sphinx pinning

Removed version constraints for xarray, sphinx, and xradar in environment.yml.

* CI: Update example build script

* CI: Update path for full doc build script

Updated script to remove examples from the source directory.

--- a/doc/environment.yml
+++ b/doc/environment.yml
@@ -13,8 +13,8 @@ dependencies:
   - metpy
   - cartopy
   - cvxopt
-  - xarray>=2024.10.0
-  - sphinx<7.2
+  - xarray
+  - sphinx
   - ipython
   - pandoc
   - pkg-config
@@ -35,7 +35,7 @@ dependencies:
   - pre_commit
   - cmweather
   - mda-xdrlib
-  - xradar>=0.8.0
+  - xradar
   - dask
   - ablog
   - pip
